Add files via upload
1. 把一些默认的弹窗界面，点击skip，选择字母代表空白的tile，加载失败，改成了自定义界面，用于避免中文系统，使弹窗出现中文字（保存和上传这两个没改，如果用的中文系统，可能还是会有中文字）
2. 修改了onRefresh，如果棋子还在棋盘上就refresh导致的错误，会先撤下棋子再实现refresh功能
3.在主界面添加introduction按键，点击后会显示有关游戏的introduction，大部分文本内容在GUI的IntroductionDialog类里
4. 修改了onRresh，使得点击后自动跳过该玩家回合
5. 增加了一个firstMoveOnlyOneWordException，让第一个被放置的单词，至少有两个字母。